Hacky fix for overflow issue with line height dropdown in TextEdit

--- a/assets/sass/notes.sass
+++ b/assets/sass/notes.sass
@@ -15,7 +15,7 @@ select
 
 .text-edit
   @include mix.window($body-color, $width, $height)
-  min-width: $width
+  min-width: vars.$width
   min-height: vars.$min-height
   -webkit-box-orient: vertical
   -webkit-box-direction: normal
