--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -263,12 +263,21 @@ canvas
   .dialogue .alert-btn
     width: 9.75rem
 
+  // Hacky fix for when line height dropdow overflows (i.e. just hide it)
+  #lineHeight
+    display: none
+
 @media screen and (max-width: calc(vars.$max-width / 1.7))
   html
     font-size: 40%
 
   .dialogue .alert-btn
     width: 9.62rem
+
+  // Hacky fix for when line height dropdow overflows (i.e. just hide it)
+  #lineHeight
+    display: none
+
 
 @media screen and (max-width: calc(vars.$max-width / 1.85))
   html
@@ -277,9 +286,17 @@ canvas
   .dialogue .alert-btn
     width: 9.36rem
 
+  // Hacky fix for when line height dropdow overflows (i.e. just hide it)
+  #lineHeight
+    display: none
+
 @media screen and (max-width: calc(vars.$max-width / 2.1))
   html
     font-size: 30%
 
   .dialogue .alert-btn
     width: 9rem
+
+  // Hacky fix for when line height dropdow overflows (i.e. just hide it)
+  #lineHeight
+    display: none
